--- a/music_classify.ipynb
+++ b/music_classify.ipynb
@@ -19,12 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Feature Extraction\n",
-    "from helper import preprocess\n",
+    "import librosa\n",
+    "from helper import process_train\n",
     "\n",
     "# Data Handling\n",
     "import glob\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,16 +89,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Creating train and test splits\n",
     "\n",
+    "files = pd.read_excel(\"Dataset/labelled_dataset.xlsx\")\n",
+    "\n",
     "X = files['audio path']\n",
     "y = files['label']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jennifertramsu/programs/miniconda3/envs/mais/lib/python3.10/site-packages/librosa/util/decorators.py:88: UserWarning: PySoundFile failed. Trying audioread instead.\n",
+      "  return f(*args, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset/genres_original/jazz/jazz.00054.wav is corrupted!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loading audio files with librosa\n",
+    "\n",
+    "X_train, y_train = process_train(X_train, y_train)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time Domain Features\n",
+    "  1) Zero Crossing Rate\n",
+    "  2) Amplitude Envelope\n",
+    "  3) RMS Energy\n",
+    "  \n",
+    "Frequency Domain Features\n",
+    "  1) Band Energy Ratio\n",
+    "  2) Spectral Centroid\n",
+    "  3) Spectral Flux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extracting Features\n",
+    "\n"
    ]
   }
  ],
